# neuro_triage

./: .gitignore  .vercelignore  README.md  package-lock.json  vercel.json
cognitriage-backend/: pyproject.toml  requirements.txt
cognitriage-backend/app/: main.py  neuroimaging.py
cognitriage-backend/app/agents/: __init__.py  treatment_recommendation.py
cognitriage-frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
cognitriage-frontend/src/: App.tsx  index.css
cognitriage-frontend/src/components/: BrainVisualization.tsx  LoadingSpinner.tsx  Sidebar.tsx
cognitriage-frontend/src/context/: AppContext.tsx
cognitriage-frontend/src/pages/: BrainView.tsx  Dashboard.tsx  Recommendations.tsx  Results.tsx  Trials.tsx
