[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["loubaba@stanford.edu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
nibabel = "^5.3.2"
pydicom = "^3.0.1"
numpy = "^2.3.2"
pillow = "^11.3.0"
python-multipart = "^0.0.20"
aiohttp = "^3.9.0"
biopython = "^1.84"
nilearn = "^0.10.4"
scipy = "^1.14.0"
scikit-image = "^0.24.0"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
